chore: skip batch embeddings
